--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
 			<div class="col-md-4">
 				<div class="card mb-4 box-shadow posts">
 					<img class="card-img-top p-2 border-bottom" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-					 alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="media/vue.png"
+					 alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="media/img/posts/C3.png"
 					 data-holder-rendered="true">
 					<div class="card-body">
 						<h3 class="mb-0">
