--- a/pages/post-1.html
+++ b/pages/post-1.html
@@ -13,7 +13,7 @@
 <hr>
 
 <div class="row preview-image">
-	<img class="img-fluid rounded mx-auto d-block" src="media/vue.png" alt="">
+	<img class="img-fluid rounded mx-auto d-block" src="media/img/posts/vue.png" alt="">
 </div>
 
 <hr>
