--- a/pages/home.html
+++ b/pages/home.html
@@ -23,26 +23,10 @@
 					 data-holder-rendered="true">
 					<div class="card-body">
 						<h3 class="mb-3">
-							<a class="text-dark post-link" href="#" data-target-page="post-1">Por que usar C#</a>
+							<a class="text-dark post-link" href="#" data-target-page="post-2">Por que usar C#</a>
 						</h3>
-						<div class="m-1 text-muted">24/10</div>
-						<p class="card-text mb-1">This is a wider card with supporting text below as a natural lead-in to additional
-							content.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="card mb-4 box-shadow posts">
-					<img class="card-img-top p-2 border-bottom" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-					 alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="media/img/posts/vue.png"
-					 data-holder-rendered="true">
-					<div class="card-body">
-						<h3 class="mb-3">
-							<a class="text-dark post-link" href="#" data-target-page="post-1">Introdução Vue.js</a>
-						</h3>
-						<div class="m-1 text-muted">24/10</div>
-						<p class="card-text mb-1">This is a wider card with supporting text below as a natural lead-in to additional
-							content.</p>
+						<div class="m-1 text-muted">30/10</div>
+						<p class="card-text mb-1">Abaixo irei mostrar como surgiu o C#, quais suas características, vantagens sobre outras linguagens.</p>
 					</div>
 				</div>
 			</div>
